--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
     .buy-button:hover {
       background-color: #c07683;
     }
+    footer {
+      background-color: #f4e2d8;
+      padding: 20px;
+      text-align: center;
+      font-size: 14px;
+      margin-top: 40px;
+    }
   </style>
 </head>
 <body>
@@ -68,7 +75,12 @@
       </form>
     </div>
 
-    <!-- Add more quilts as needed -->
+    <!-- More products can be added here -->
   </main>
+
+  <footer>
+    <p>&copy; 2025 Grandma's Quilts | All rights reserved.</p>
+    <p>Contact us at: <a href="mailto:grandmasquilts@example.com">grandmasquilts@example.com</a></p>
+  </footer>
 </body>
 </html>
