--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       padding: 0;
     }
     header {
-      background-color: #d88c9a;
+      background-color: #87ceeb; /* Light sky blue */
       color: white;
       padding: 20px;
       text-align: center;
@@ -39,7 +39,7 @@
       margin-top: 10px;
     }
     .buy-button {
-      background-color: #d88c9a;
+      background-color: #00bcd4; /* Cyan */
       color: white;
       border: none;
       padding: 10px 15px;
@@ -48,14 +48,7 @@
       border-radius: 5px;
     }
     .buy-button:hover {
-      background-color: #c07683;
-    }
-    footer {
-      background-color: #f4e2d8;
-      padding: 20px;
-      text-align: center;
-      font-size: 14px;
-      margin-top: 40px;
+      background-color: #0097a7;
     }
   </style>
 </head>
@@ -75,12 +68,7 @@
       </form>
     </div>
 
-    <!-- More products can be added here -->
+    <!-- Add more quilts as needed -->
   </main>
-
-  <footer>
-    <p>&copy; 2025 Grandma's Quilts | All rights reserved.</p>
-    <p>Contact us at: <a href="mailto:grandmasquilts@example.com">grandmasquilts@example.com</a></p>
-  </footer>
 </body>
 </html>
