--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grandma's Quilts</title>
+  <title>Grandma's Quilts | Ruth Carpenter</title>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -14,7 +14,7 @@
       padding: 0;
     }
     header {
-      background-color: #87ceeb; /* Light sky blue */
+      background-color: #87ceeb; /* Light Sky Blue */
       color: white;
       padding: 20px;
       text-align: center;
@@ -39,7 +39,7 @@
       margin-top: 10px;
     }
     .buy-button {
-      background-color: #00bcd4; /* Cyan */
+      background-color: #87ceeb; /* Light Sky Blue */
       color: white;
       border: none;
       padding: 10px 15px;
@@ -48,17 +48,28 @@
       border-radius: 5px;
     }
     .buy-button:hover {
-      background-color: #0097a7;
+      background-color: #5bb0d4;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Grandma's Quilts</h1>
+    <h1>Grandma's Quilts | Ruth Carpenter</h1>
     <p>Handmade with love in every stitch</p>
   </header>
 
   <main>
+    <section>
+      <h2>Welcome</h2>
+      <p>Welcome to Grandma’s Quilts, where every piece is crafted with heart, history, and a whole lot of love. My name is Ruth Carpenter. I’m 85 years old, born and raised right here in Avery County, North Carolina. I spent years working at Baxter’s and caring for elderly folks who needed a little extra help—because that’s just what we do around here.</p>
+
+      <p>These days, even though my hands ache from carpal tunnel and my eyesight isn’t what it used to be, quilting is still my joy. I can’t see to thread a needle anymore, so my daughter Cindy and my grandson Ryan help me set up my old-fashioned Singer pedal machine, and I do the rest by hand—just like I always have.</p>
+
+      <p>Every quilt I make is filled with warmth, memory, and purpose. I do it not just because I love it, but because I believe handmade things carry stories—and it’s my way of giving something meaningful back to the world, especially in a time where every bit of support counts.</p>
+
+      <p>Thank you for supporting handmade, heart-made work. It means the world to me, and I hope each quilt brings comfort and love into your home the way they’ve always brought it into mine.</p>
+    </section>
+
     <div class="product">
       <img src="https://via.placeholder.com/600x400?text=Handmade+Quilt" alt="Handmade Quilt">
       <h2>Cozy Patchwork Quilt</h2>
