--- a/index.html
+++ b/index.html
@@ -83,3 +83,7 @@
   </main>
 </body>
 </html>
+
+<marquee behavior="scroll" direction="left" scrollamount="5" style="font-family: 'Quicksand', sans-serif; font-size: 18px; color: #3a8ecf; padding: 10px 0;">
+  Each quilt is handcrafted with love by Grandma Ruth Carpenter of Avery County, NC. Supporting her means supporting a lifetime of care, family, and tradition.
+</marquee>
